<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/search"
            android:title="@string/menu_search" />
        <item
            android:id="@+id/nav_favorites"
            android:icon="@drawable/favorite"
            android:title="@string/menu_favorites" />

        <item
            android:id="@+id/nav_shopping"
            android:icon="@drawable/shopping"
            android:title="@string/menu_shopping" />

        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/help"
            android:title="@string/menu_help" />
    </group>
</menu>