<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_marginTop="25dp"
    android:paddingBottom="25dp"
    android:layout_width="match_parent"
    android:layout_height="475dp">

    <TextView
        android:id="@+id/help_page1"
        android:text="@string/help_page1"
        android:textSize="12pt"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/help_page2" />

    <TextView
        android:id="@+id/help_page2"
        android:text="@string/help_page2"
        android:textSize="8pt"
        android:textAlignment="center"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/help_page1"
        app:layout_constraintBottom_toTopOf="@id/help_page3" />

    <TextView
        android:id="@+id/help_page3"
        android:text="@string/help_page3"
        android:textSize="8pt"
        android:textAlignment="center"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/help_page2"
        app:layout_constraintBottom_toTopOf="@id/help_page4" />

    <TextView
        android:id="@+id/help_page4"
        android:text="@string/help_page4"
        android:textSize="8pt"
        android:textAlignment="center"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/help_page3"
        app:layout_constraintBottom_toTopOf="@id/help_page5" />

    <TextView
        android:id="@+id/help_page5"
        android:text="@string/help_page5"
        android:textSize="8pt"
        android:textAlignment="center"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/help_page4"
        app:layout_constraintBottom_toTopOf="@id/help_page6" />

    <TextView
        android:id="@+id/help_page6"
        android:text="@string/help_page6"
        android:textSize="8pt"
        android:textAlignment="center"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/help_page5"
        app:layout_constraintBottom_toTopOf="@id/help_page7" />

    <TextView
        android:id="@+id/help_page7"
        android:text="@string/help_page7"
        android:textSize="8pt"
        android:textAlignment="center"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/help_page6"
        app:layout_constraintBottom_toTopOf="@id/help_page8" />

    <TextView
        android:id="@+id/help_page8"
        android:text="@string/help_page8"
        android:textSize="8pt"
        android:textAlignment="center"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/help_page7"
        app:layout_constraintBottom_toTopOf="@id/help_page9" />

    <TextView
        android:id="@+id/help_page9"
        android:text="@string/help_page9"
        android:textSize="8pt"
        android:textAlignment="center"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/help_page8"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>