<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TodayFragment">

    <TextView
        android:id="@+id/date"
        android:text="@string/date"
        android:textSize="20pt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/breakfast"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <Button
        android:id="@+id/breakfast"
        android:text="@string/breakfast"
        android:layout_marginTop="25dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        app:layout_constraintTop_toBottomOf="@id/date"
        app:layout_constraintBottom_toTopOf="@id/lunch"
        />

    <Button
        android:id="@+id/lunch"
        android:text="@string/lunch"
        android:layout_marginTop="25dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        app:layout_constraintTop_toBottomOf="@id/breakfast"
        app:layout_constraintBottom_toTopOf="@id/dinner"
        />

    <Button
        android:id="@+id/dinner"
        android:text="@string/dinner"
        android:layout_marginTop="25dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        app:layout_constraintTop_toBottomOf="@id/lunch"
        app:layout_constraintBottom_toBottomOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>