<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LandingFragment">

    <Button
        android:id="@+id/today"
        android:text="@string/today"
        android:layout_width="115dp"
        android:layout_height="50dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/weekly"
        android:onClick="todayOnClick"
        />

    <Button
        android:id="@+id/weekly"
        android:text="@string/weekly"
        android:layout_width="115dp"
        android:layout_height="50dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/today"
        app:layout_constraintEnd_toStartOf="@id/monthly"
        android:onClick="weeklyOnClick"
        />

    <Button
        android:id="@+id/monthly"
        android:text="@string/monthly"
        android:layout_width="115dp"
        android:layout_height="50dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/weekly"
        app:layout_constraintEnd_toEndOf="parent"
        android:onClick="monthlyOnClick"
        />


</androidx.constraintlayout.widget.ConstraintLayout>