<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout tools:context=".SearchFragment"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <TextView
        android:id="@+id/title"
        android:text="@string/search_title"
        android:textSize="25pt"
        android:textColor="@color/black"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <EditText
        android:id="@+id/search_bar"
        android:textSize="12pt"
        android:inputType="text"
        android:hint="@string/search_hint"
        android:autofillHints=""
        android:layout_height="wrap_content"
        android:layout_width="250dp"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/search_button"
        />

    <Button
        android:id="@+id/search_button"
        android:text="@string/search_btn"
        android:textSize="10pt"
        android:layout_height="60dp"
        android:layout_width="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintStart_toEndOf="@id/search_bar"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ListView
        android:id="@+id/recipes"
        android:layout_margin="15dp"
        android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/search_bar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>
